# Cross-cloud

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
cdeh/: __init__.py  cli.py  server.py
cdeh/adapters/: __init__.py  azure_blob.py  base.py  local.py  mysql.py  s3.py  sftp.py
cdeh/core/: __init__.py  audit.py  auth.py  cache.py  catalog.py  checkpoint.py  gateway.py  policy.py  transfer.py
cdeh/transformers/: __init__.py  base.py  codec.py  compress.py  encrypt.py  mask.py  redaction.py
deploy/: Dockerfile  README.md  docker-compose.yml  start.sh  stop.sh
docs/: API.md  ARCHITECTURE.md  DEPLOY.md  README.md  SECURITY.md
examples/: batch_demo.py  cross_cloud_share.py  policy_demo.py  production_features_demo.py
tests/: conftest.py  test_new_features.py  test_smoke.py  test_sync_async_batch.py
